21.0.2
-------
(RB=1309804)
Update test to use old property values	

21.0.1
-------
(RB=1306976)
Update tests to use old property values

(RB=1299505)
Remove request query params from response location header for CREATE and BATCH_CREATE

(RB=1301460)
Bump up parseq version to non EOLed version.

(RB=1297701)
Define ZKAclProvider interface

21.0.0
-------

20.0.23
-------
(RB=1290394)
Update default values of the following properties:
	DEFAULT_RAMP_FACTOR = 2.0;
	DEFAULT_HIGH_WATER_MARK = 600;
	DEFAULT_LOW_WATER_MARK = 200;
	DEFAULT_DOWN_STEP = 0.05;
	DEFAULT_MIN_CALL_COUNT = 1;
	DEFAULT_HIGH_LATENCY = Time.milliseconds(400);
	DEFAULT_LOW_LATENCY  = Time.milliseconds(200);
	DEFAULT_REQUEST_TIMEOUT = 1000;

20.0.22
-------
(RB=1283017)
SyncIoHandler should notify its reader/writer when exception happends

20.0.21
-------
(RB=1288205)
Remove Flow API

(RB=1278581)
Emits R2 channel pool events

(RB=1289790)
SslHandshakeTimingHandler only produces a TransportCallback

20.0.20
-------
(RB=1286630)
Adding error codes to ServiceUnavailableException

20.0.19
-------
(RB=1260149)
add zookeeper connection sharing feature

20.0.18
-------
(RB=1281573)
Expose getFields() to FindRequest/GetAllRequest/CreateIdEntityRequest

20.0.17
-------
(RB=1266681)
Fix NPE in d2 caused by QD.
When QD doesn't contain required schema(https), transportClient will be null and through NPE.
This change fix the NPE and throw ServiceUnavailableException instead.

(RB=1275957)
Fix distributionBased ring creation with an empty pointsMap

(RB=1265252)
Added implementation for reactive streaming JSON encoder.

20.0.16
------
(RB=1269478)
Temporarily downgrade timings warning to debug to satisfy EKG

20.0.15
------
(RB=1269478)
Fix warning on "already completed timing"

20.0.14
-------
(RB=1206036)
Add timings to d2 and r2 stages
(RB=1258849)
Remove LongTracking and add minimum sampling period to AsyncPoolStatsTracker

(RB=1259113)